packages/svelte/tests/validator/samples/slot-attribute-component/input.svelte
<Foo slot="foo">valid</Foo>
<Foo slot={foo}>valid</Foo>
<Foo>
    {#if true}
        <Foo slot="foo">valid</Foo>
        <Foo slot={foo}>valid</Foo>
    {/if}
</Foo>