packages/svelte/tests/compiler-errors/samples/const-tag-sequence/main.svelte
{#if true}
	{@const foo = 'foo', bar = 'bar'}
{/if}